// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`referrals utilities referralHistoryRows returns formatted rows for a given list of referrals 1`] = `
[
  [
    {
      "text": "Approved Premises (CAS1) placement",
    },
    {
      "text": "You (Alice Smith)",
    },
    {
      "html": "<span class="sas-table__cell-header" aria-hidden="true">Status</span>
  <strong class="govuk-tag govuk-tag--orange">Cancelled</strong>
    <p class="sas-status__date">15 January 2023</p>
    ",
    },
    {
      "html": "
    <div class="govuk-summary-list__actions govuk-!-padding-0">
      <span class="govuk-table-span govuk-body">
        <ul class="govuk-summary-list__actions-list govuk-!-margin-0">
          
            <li class="govuk-summary-list__actions-list-item">
              <a class="govuk-link govuk-link--no-visited-state" href="#">View application</a>
            </li>
          
        </ul>
      </span>
    </div>
  ",
    },
  ],
  [
    {
      "text": "CAS3 referral",
    },
    {
      "text": "Matt Jones",
    },
    {
      "html": "<span class="sas-table__cell-header" aria-hidden="true">Status</span>
  <strong class="govuk-tag govuk-tag--orange">Rejected</strong>
    <p class="sas-status__date">25 March 2023</p>
    ",
    },
    {
      "html": "
    <div class="govuk-summary-list__actions govuk-!-padding-0">
      <span class="govuk-table-span govuk-body">
        <ul class="govuk-summary-list__actions-list govuk-!-margin-0">
          
            <li class="govuk-summary-list__actions-list-item">
              <a class="govuk-link govuk-link--no-visited-state" href="#">View referral</a>
            </li>
          
        </ul>
      </span>
    </div>
  ",
    },
  ],
  [
    {
      "text": "Duty to refer",
    },
    {
      "text": "You (Alice Smith)",
    },
    {
      "html": "<span class="sas-table__cell-header" aria-hidden="true">Status</span>
  <strong class="govuk-tag govuk-tag--green">Accepted</strong>
    <p class="sas-status__date">Submitted on 30 April 2023</p>
    ",
    },
    {
      "html": "
    <div class="govuk-summary-list__actions govuk-!-padding-0">
      <span class="govuk-table-span govuk-body">
        <ul class="govuk-summary-list__actions-list govuk-!-margin-0">
          
            <li class="govuk-summary-list__actions-list-item">
              <a class="govuk-link govuk-link--no-visited-state" href="/cases/CRN123/dtr/901234/details">View referral</a>
            </li>
          
        </ul>
      </span>
    </div>
  ",
    },
  ],
]
`;

exports[`referrals utilities referralHistoryTable macro renders a message and no table when there are no referrals 1`] = `
"<div class="govuk-summary-card">
    <div class="govuk-summary-card__title-wrapper">
      <h2 class="govuk-summary-card__title">Referral history</h2>
    </div>
    <div class="govuk-summary-card__content">
      
        
          <p class="govuk-body">No previous referrals</p>
        
      
    </div>
  </div>"
`;

exports[`referrals utilities referralHistoryTable macro renders a message when there is an API error 1`] = `
"<div class="govuk-summary-card">
    <div class="govuk-summary-card__title-wrapper">
      <h2 class="govuk-summary-card__title">Referral history</h2>
    </div>
    <div class="govuk-summary-card__content">
      
        <p class="moj-inset-api-error">This information is currently unavailable. Try again later.</p>
      
    </div>
  </div>"
`;

exports[`referrals utilities referralHistoryTable macro renders the referral history table for a given list of referrals 1`] = `
"<div class="govuk-summary-card">
    <div class="govuk-summary-card__title-wrapper">
      <h2 class="govuk-summary-card__title">Referral history</h2>
    </div>
    <div class="govuk-summary-card__content">
      
        
          <div class="govuk-summary-list">
            <table class="govuk-table sas-table">


  <thead class="govuk-table__head">
    <tr class="govuk-table__row">
    
      <th scope="col" class="govuk-table__header">Referral type</th>
    
      <th scope="col" class="govuk-table__header">Referred by</th>
    
      <th scope="col" class="govuk-table__header">Status and details</th>
    
      <th scope="col" class="govuk-table__header"></th>
    
    </tr>
  </thead>

  <tbody class="govuk-table__body">

  
    <tr class="govuk-table__row">
    
      
      
      <th scope="row" class="govuk-table__header">Approved Premises (CAS1) placement</th>
      
    
      
      
      <td class="govuk-table__cell">You (Alice Smith)</td>
      
    
      
      
      <td class="govuk-table__cell"><span class="sas-table__cell-header" aria-hidden="true">Status</span>
  <strong class="govuk-tag govuk-tag--orange">Cancelled</strong>
    <p class="sas-status__date">15 January 2023</p>
    </td>
      
    
      
      
      <td class="govuk-table__cell">
    <div class="govuk-summary-list__actions govuk-!-padding-0">
      <span class="govuk-table-span govuk-body">
        <ul class="govuk-summary-list__actions-list govuk-!-margin-0">
          
            <li class="govuk-summary-list__actions-list-item">
              <a class="govuk-link govuk-link--no-visited-state" href="#">View application</a>
            </li>
          
        </ul>
      </span>
    </div>
  </td>
      
    
    </tr>
  

  
    <tr class="govuk-table__row">
    
      
      
      <th scope="row" class="govuk-table__header">CAS3 referral</th>
      
    
      
      
      <td class="govuk-table__cell">Matt Jones</td>
      
    
      
      
      <td class="govuk-table__cell"><span class="sas-table__cell-header" aria-hidden="true">Status</span>
  <strong class="govuk-tag govuk-tag--orange">Rejected</strong>
    <p class="sas-status__date">25 March 2023</p>
    </td>
      
    
      
      
      <td class="govuk-table__cell">
    <div class="govuk-summary-list__actions govuk-!-padding-0">
      <span class="govuk-table-span govuk-body">
        <ul class="govuk-summary-list__actions-list govuk-!-margin-0">
          
            <li class="govuk-summary-list__actions-list-item">
              <a class="govuk-link govuk-link--no-visited-state" href="#">View referral</a>
            </li>
          
        </ul>
      </span>
    </div>
  </td>
      
    
    </tr>
  

  
    <tr class="govuk-table__row">
    
      
      
      <th scope="row" class="govuk-table__header">Duty to refer</th>
      
    
      
      
      <td class="govuk-table__cell">You (Alice Smith)</td>
      
    
      
      
      <td class="govuk-table__cell"><span class="sas-table__cell-header" aria-hidden="true">Status</span>
  <strong class="govuk-tag govuk-tag--green">Accepted</strong>
    <p class="sas-status__date">Submitted on 30 April 2023</p>
    </td>
      
    
      
      
      <td class="govuk-table__cell">
    <div class="govuk-summary-list__actions govuk-!-padding-0">
      <span class="govuk-table-span govuk-body">
        <ul class="govuk-summary-list__actions-list govuk-!-margin-0">
          
            <li class="govuk-summary-list__actions-list-item">
              <a class="govuk-link govuk-link--no-visited-state" href="/cases/CRN123/dtr/901234/details">View referral</a>
            </li>
          
        </ul>
      </span>
    </div>
  </td>
      
    
    </tr>
  

  </tbody>
</table>

          </div>
        
      
    </div>
  </div>"
`;
